<resources>
    <string name="title_home">آموزش</string>
    <string name="title_about">درباره ما</string>
    <string name="title_dashboard">رکعت شمار</string>
    <string name="ahkam">آموزش احکام</string>
    <string name="title_notifications">نمازها</string>
    <string name="salame_namaz">تشهد و سلام</string>
    <string name="rakat_aval">رکعت اول</string>
    <string name="sajde_aval">سجده اول</string>
    <string name="sajde_dowom">سجده دوم</string>
    <string name="rakatDowom">رکعت دوم </string>
    <string name="tashhod">تشهد</string>
    <string name="rakat_sewom">رکعت سوم</string>
    <string name="rakat_chaharom">رکعت چهارم</string>
    <string name="asha">اعشاء</string>
    <string name="maghreb">مغرب</string>
    <string name="asr">عصر</string>
    <string name="zohr">ظهر</string>
    <string name="sobh">صبح</string>
    <string name="pull_back">pull_back</string>
    <string name="raw">raw</string>
    <string name="namaz">نمازها</string>
    <string name="amoozesh">آموزش</string>
    <string name="payambar">پیامبر (ص)</string>
    <string name="fa_hadis">هر چیز دارای سیماست، سیمای دین شما نماز است</string>
    <string name="Ab_hadis">لِکُلِّ شَیءٍ وَجهٌ وَ وَجهُ دینِکم الصَّلاةُ</string>
    <string name="tasbihat">تسبیحات</string>
    <string name="taaghibat">تعقیبات</string>
    <string name="more">بیشتر</string>
    <string name="version_app">ورژن: %1$s</string>
    <string name="setting">امتیاز و ثبت نظر</string>
    <string name="zekr_shomar">صلوات شمار</string>
    <string name="rakaat_shomar">رکعت شمار</string>
    <string name="bazaar_not_install_message">برنامه بازار نصب نیست!</string>
    <string name="bazaar_package_name">com.farsitel.bazaar</string>
    <string name="bazaar_details_id_com_borjali_mostafa_pray">bazaar://details?id=com.borjali.mostafa.pray</string>
    <string name="myket_details_id_com_borjali_mostafa_pray">myket://comment?id=com.borjali.mostafa.pray.myket</string>
    <string name="bazaar_url">https://cafebazaar.ir/</string>
    <string name="about_message">\ کاربر گرامی\nاین برنامه شامل بخش های زیر می باشد:\nلیست و کیفیت خواندن نماز های واجب \n لیست و کیفیت خواندن نماز های مستحبی\nآموزش احکام و روش صحیح خوانی نمازها \n\nاین برنامه کاملاً رایگان بوده و درصورت امکان ما را از دعای خیرتان محروم نفرمایید\n با تشکر\n\t \t سید علی موسوی و مصطفی برجعلی \n\nنظرات و انتقادات خود را به ایمیل زیر ارسال نمایید \nMostafa.borjali.68@gmail.com\n</string>
    <string name="internet_message">به اینترنت وصل نمی باشید!</string>
    <string name="end_message">پایان</string>
    <string name="app_exit_message">برای خروج دوبار دکمه بک را بزنید</string>
    <string name="mail_to">mailto:</string>
    <string name="my_gmail">mostafa.borjali.68@gmail.com</string>
    <string name="gmail_subject"> نماز های مستحبی</string>
    <string name="gmail_body">"با سلام و احترام"</string>
    <string name="send_email">ارسال ایمیل …</string>
    <string name="report_title">دریافت پیشنهادات</string>
    <string name="error_send_email">خطا در ارسال ایمل</string>
    <string name="rakaat_shomar_message">برای استفاده صفحه را لمس کنید.</string>
    <string name="permission_guide_simple">مراحل دادن دسترسی به صورت دستی:\n1. به تنظیمات - برنامه‌ها بروید\n2. برنامه ما را انتخاب کنید\n3. روی دسترسی‌ها کلیک کنید\n4. گزینه ایجاد میانبر در صفحه اصلی را فعال کنید\nتوجه: در برخی گوشی‌ها این گزینه ممکن است در سایر دسترسی‌ها باشد.</string>
    <string name="shortcut_confirm">بله، ایجاد کن</string>
    <string name="shortcut_cancel">نه، ممنونم</string>
    <string name="shortcut_description">آیا می‌خواهید یک دسترسی سریع برای رکعت شمار روی صفحه اصلی ایجاد کنید؟</string>
    <string name="shortcut_title">دسترسی سریع</string>
</resources>
